# stm8-sdcc-cmake

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  compile_commands.json  cspell.json
.cache/clangd/index/: main.c.FE28B551710A751E.idx  stm8l15x.h.85D52A5FB9F2046F.idx  stm8l15x_conf.h.E66B8FA814DE268F.idx  stm8l15x_gpio.h.D8CF2699E79082FB.idx
cmake/: FindSTM8_StdPeriph.cmake  GenerateCompileCommands.cmake  sdcc-generic.cmake
docs/: CLANGD_FIX_HEADER_JUMP.md  CLANGD_QUICKSTART.md  FIX_QT_CMAKE.md  QUICK_START.md  README_CLANGD.md  README_CMAKE_TOOLS.md  README_VSCODE.md  TOOLCHAIN_DIAGNOSIS.md  TOOLCHAIN_FLOW.md  工具链查找机制.md
script/: build.bat  check_toolchain.bat  fix_clangd.ps1  generate_compile_commands.bat  generate_compile_commands.ps1
source/app/: CMakeLists.txt  main.c
source/stm8l-gpio/: CMakePresets.json
